--- a/style.css
+++ b/style.css
@@ -2,12 +2,29 @@ html,
 body {
   height: 100%;
   margin: 0;
+  background-image: url("images/1511.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+nav {
+  margin-top: 0;
+  border: 3px solid #304b71;
 }
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  width: 80%;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.85);
 }
+
+.section-container {
+  margin-top: 10%;
+}
+
 section {
   flex: 1;
 }
@@ -17,7 +34,6 @@ section {
   --background-color: #d08116;
   --font-size: 16px;
 }
-
 header {
   background-color: var(--primary-color);
 }
@@ -49,22 +65,20 @@ h1 {
 }
 img {
   width: 20%;
+  border-radius: 1.5rem;
 }
 .introduction {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  margin-top: 0px;
   gap: 5rem;
-}
-.introduction-text {
-  margin-top: 4rem;
 }
 .introduction a {
   text-decoration: none;
-  width: 2rem;
   background-color: var(--background-color);
   color: wheat;
-  padding: 0.8rem;
+  padding: 1rem;
   border-radius: 2rem;
 }
 .introduction a:hover {
@@ -73,6 +87,7 @@ img {
 }
 .about-me h2,
 .skills h2,
+.contact h2,
 h3 {
   text-align: center;
 }
@@ -82,7 +97,8 @@ p {
 }
 .about-me {
   max-width: 800px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 .about-me p {
@@ -112,11 +128,54 @@ p {
   margin-bottom: 10px;
   color: #0078d4;
 }
-
 .grid-item p {
   margin: 0;
   font-weight: bold;
   color: #333;
+}
+.contact {
+  max-width: 70%;
+  margin: 0 auto;
+}
+fieldset {
+  border: none;
+  padding: 2rem;
+  text-align: center;
+}
+input {
+  width: 40rem;
+  margin: 0.8rem 0;
+  padding: 0.8rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+textarea {
+  margin-top: 0.8rem;
+  width: 40rem;
+  height: 20rem;
+  padding: 0.8rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+input:focus,
+textarea:focus {
+  border: 3px solid #304b71;
+  outline: none;
+}
+.button {
+  display: block;
+  margin: 2rem auto;
+  text-align: center;
+  padding: 10px 30px;
+  border: none;
+  background-color: var(--background-color);
+  color: wheat;
+  font-size: 1rem;
+  border-radius: 2rem;
+}
+.button:hover {
+  background-color: wheat;
+  color: var(--background-color);
 }
 footer {
   background-color: black;
