--- a/style.css
+++ b/style.css
@@ -88,8 +88,10 @@ img {
 .about-me h2,
 .skills h2,
 .contact h2,
+.projects h2,
 h3 {
   text-align: center;
+  margin-bottom: 30px;
 }
 p {
   margin-bottom: 3rem;
@@ -132,6 +134,17 @@ p {
   margin: 0;
   font-weight: bold;
   color: #333;
+}
+.project {
+  width: 25rem;
+  height: 20rem;
+  background-color: wheat;
+}
+.project-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 50px;
 }
 .contact {
   max-width: 70%;
