--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   padding-top: 20px;
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: rgba(240, 240, 240, 0.1);
 }
 
 .about-me h2,
@@ -26,7 +26,6 @@ body {
   margin-bottom: 30px;
 }
 
-/* Remove the decorative lines */
 .about-me h2::after,
 .skills h2::after,
 .contact h2::after,
@@ -35,9 +34,8 @@ body {
 }
 
 section {
-  height: calc(100vh - 50px);
+  height: calc(100vh - 30px);
   scroll-margin-top: 80px;
-  margin-bottom: 2rem;
 }
 
 #skills {
@@ -58,6 +56,9 @@ p {
   line-height: 1.5rem;
 }
 
+section:nth-child(odd) {
+  background-color: hsla(196, 75%, 76%, 0.6);
+}
 
 /* HEADER AND NAVIGATION */
 
@@ -78,7 +79,7 @@ nav ul {
   list-style-type: none;
   display: flex;
   justify-content: center;
-  gap: 5rem;
+  gap: 1rem;
 }
 
 nav li {
@@ -93,12 +94,31 @@ nav a {
   font-weight: bold;
   text-decoration: none;
   display: block;
-  padding: 1rem;
+  padding: 0rem 1rem;
 }
 
-nav a:hover {
-  background-color: white;
-  color: var(--secondary-color);
+
+.underline-animate {
+  display: inline-block;
+  position: relative;
+  /* text color */
+  cursor: pointer;
+}
+
+.underline-animate::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 3px;
+  background-color: var(--background-color);
+  /* orange */
+  transition: width 0.4s ease;
+}
+
+.underline-animate:hover::after {
+  width: 100%;
 }
 
 /* INTRODUCTION */
@@ -361,11 +381,38 @@ nav a:hover {
   margin-bottom: 50px;
 }
 
+.project-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+}
+
 .project {
-  width: 25rem;
+  width: 20rem;
   height: 20rem;
   background-color: wheat;
-  margin: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.project img {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+  background-color: white;
+  display: block;
+}
+
+.project h3 {
+  color: var(--primary-color);
+  font-size: 1.2rem;
+  margin: 0;
+  text-align: center;
+  padding: 10px;
 }
 
 /* CONTACT */
@@ -410,10 +457,17 @@ input {
 textarea {
   margin-top: 0.8rem;
   width: 40rem;
-  height: 20rem;
+  height: 15rem;
   padding: 0.8rem;
   border: 1px solid #ccc;
   border-radius: 6px;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+  border: 2px solid var(--primary-color);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .button {
