--- a/style.css
+++ b/style.css
@@ -56,9 +56,9 @@ p {
   line-height: 1.5rem;
 }
 
-section:nth-child(odd) {
-  background-color: hsla(196, 75%, 76%, 0.6);
-}
+/* section:nth-child(odd) {
+  background-color: rgb(254, 0, 0);
+} */
 
 /* HEADER AND NAVIGATION */
 
