--- a/style.css
+++ b/style.css
@@ -152,7 +152,6 @@ nav a {
 .introduction h2 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
-  white-space: nowrap;
 }
 
 .introduction p {
@@ -161,7 +160,7 @@ nav a {
   margin-bottom: 2rem;
 }
 
-.introduction a {
+#cv {
   text-decoration: none;
   background-color: var(--background-color);
   color: wheat;
@@ -173,7 +172,7 @@ nav a {
   transition: all 0.3s ease;
 }
 
-.introduction a:hover {
+#cv:hover {
   background-color: wheat;
   color: var(--background-color);
   transform: translateY(-2px);
@@ -366,6 +365,7 @@ nav a {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
   margin-bottom: 50px;
 }
 
@@ -576,6 +576,7 @@ footer {
   }
 
   .project-items {
+    display: flex;
     flex-direction: column;
     align-items: center;
   }
